Based on Qt 4.5.
Display constellations lines using nicely distorted arcs.
Fixed GUI problems when creating a new location.
Fixed the grid lines wrap around at the discontinuities in cylindrical and Mercator projection.
Hide the planet computation problems after year 80608.
Use the Qt raster engine by default. This fixes mac rendering bugs and speeds up greatly the GUI rendering.

0.10.1 [2009-02-02]
Added reset all config options button.
Added code for uncompressing gzip files (borrowed from from libkde)
Allowed for gzip compressed JSON files.
Fixed flip buttons bug.
Fixed min FPS feature.
Implemented screenshots inverted colors feature + associated GUI.
Re-coded grid display from scratch. It is now much faster and much more robust.
Refactored large part of the Navigator and Projector classes. Added a StelPainter class allowing many optimizations and simpler API.
Re-added telescope control key bindings.
Improved the doxygen developers documentation.
Added Simbad lookup to the search window.
Fixed ecliptic line rendering.
Fixed grid rendering bugs.
Added ZIP archive support with code copied from KDE SVN.
Fixed sun's magnitude bug.
Added automatic star catalog downloader to GUI. Star catalog settings are now defined in a config file.
Converted system-dependent star catalog memory mapping code to QFile::map().
Added log file for debugging output. Prepends system specs, such as memory and CPU information.
Imported KdeWin32 code for POSIX emulation on Windows.
Fixed build with Qt 4.5.
Fixed full screen problems at init.
Optimized VecXX contructors (no more default values).
Added translations for Albanian and Bosnian.
Fixed many bugs.

0.10.0 beta [2008-09-22]
Global switch to Qt. Don't support SDL main application anymore.
The whole StelApp class is managed by a QGraphicsScene, inside a QGraphicsView.
Removed deprecated sources from the core of stellarium (old GUI, TUI and scripting).
Continued API cleaning and simplifications.