@@ -63,7 +63,7 @@ public:
 		ProjectionEqualArea,      //!< Equal Area projection
 		ProjectionStereographic,  //!< Stereograhic projection
 		ProjectionFisheye,	      //!< Fisheye projection
-  		ProjectionAitoff,         //!< Aitoff projection
+  		ProjectionHammer,         //!< Hammer-Aitoff projection
 		ProjectionCylinder,	      //!< Cylinder projection
 		ProjectionMercator,	      //!< Mercator projection
 		ProjectionOrthographic	  //!< Orthographic projection
