@@ -5,6 +5,8 @@ Fixed GUI problems when creating a new location.
 Fixed the grid lines wrap around at the discontinuities in cylindrical and Mercator projection.
 Hide the planet computation problems after year 80608.
 Use the Qt raster engine by default. This fixes mac rendering bugs and speeds up greatly the GUI rendering.
+Improved management of intersection of viewports with large FOV and projections with singularities.
+Added Hammer-Aitoff projection allowing full sky overview.
 
 0.10.1 [2009-02-02]
 Added reset all config options button.
